--- a/src/html/apply.html
+++ b/src/html/apply.html
@@ -127,7 +127,7 @@
 
 
         <div class="l-full">
-            <accordion>
+            <accordion numbered="true">
                 <accordion-element
                         title="Apply online"
                         subtitle="10 minutes"
